# PowerClip

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  build.zig  build.zig.zon  database.py  logger.py  main.py  pyproject.toml
.github/workflows/: build.yml  release.yml
frontend/: build.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/coverage/.tmp/: coverage-0.json  coverage-1.json
frontend/src/: App.old.tsx  App.tsx  constants.ts  index.css  main.tsx  theme.ts  types.ts
frontend/src/components/: AddSnippetDialog.tsx  ClipboardListItem.tsx  EmptyState.tsx  ExtensionBar.tsx  ExtensionSelector.tsx  PreviewPanel.tsx  QuickMenu.tsx  ResizeHandle.tsx  SemanticToggle.tsx  SettingsDialog.tsx  SmartLists.tsx  SnippetDialog.tsx  SnippetListItem.tsx  StatusBar.tsx  WindowDragHandler.tsx  index.ts
frontend/src/components/icons/: IconDocument.tsx  IconFile.tsx  IconImage.tsx  index.ts
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  index.ts  input.tsx  scroll-area.tsx  textarea.tsx  tooltip.tsx
frontend/src/hooks/: useSemanticSearch.ts
frontend/src/test/: app-scroll.test.tsx  constants.test.ts  helpers.test.ts  platform.test.ts  scroll-behavior.test.tsx  types.test.ts  useDebouncedValue.test.ts
frontend/src/utils/: helpers.ts  logger.ts  platform.ts
src/: database.py  logger.py  main.py  main.zig  utils.py
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/src/: app_settings.rs  config.rs  error.rs  main.rs  monitor.rs  window_config.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: extensions.rs  history.rs  image.rs  mod.rs  paste.rs  settings.rs  snippets.rs
src-tauri/src/db/: mod.rs  snippets.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/paste_queue/: mod.rs
src-tauri/src/quick_menu/: mod.rs
src-tauri/src/semantic/: README.md  api.rs  commands.rs  db.rs  embedding.rs  mod.rs  model.rs  search.rs
src-tauri/src/window/: commands.rs  config.rs  macos.rs  mod.rs  windows.rs
