[package]
name = "powerclip-tauri"
version = "0.1.0"
description = "PowerClip - Clipboard Manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image", "image-png"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "time", "io-util"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
image = "0.25"
dirs = "5"
base64 = "0.22"
cfg-if = "1"
global-hotkey = "0.5"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
